fix(s3stream): initialize wal object id to -1 on compaction (#222)
Signed-off-by: Shichao Nie <niesc@automq.com>